--- a/artistree/package.json
+++ b/artistree/package.json
@@ -21,6 +21,7 @@
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "query-string": "^6.12.1",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
