got myself some new shiny keys and secrets because this smart bro did not .gitignore the env file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5555
-SESSION_SECRET=“fghjkl”
+SESSION_SECRET=“bropls”
 cloudName = artistree
 cloudKey = 977744844576152
 cloudSecret = QMeXFWzBWO4Oy8sJ5lyhoielUas
