--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,30 @@
-# Dependency directory
-artistree/node_modules
-
 # Debug log from npm
-artistree/npm-debug.log
+npm-debug.log
 
 # Environment Variables should NEVER be published
-artistree/.env
+.env
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-artistree/node_modules
-artistree/.pnp
-artistree/.pnp.js
+node_modules
+.pnp
+.pnp.js
 
 # testing
-artistree/coverage
-
-# production
-artistree/build
+coverage
 
 # misc
-artistree/.DS_Store
-artistree/.env.local
-artistree/.env.development.local
-artistree/.env.test.local
-artistree/.env.production.local
-
-artistree/npm-debug.log*
-artistree/yarn-debug.log*
-artistree/yarn-error.log*
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 .env
-node_modules
 client/node_modules
 .vscode
 .git
