--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "artistree",
   "version": "0.0.0",
   "private": true,
+  "homapage": "https://artis-tree.herokuapp.com",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "DEBUG=artistree:* nodemon --inspect ./bin/www",
