--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node_modules/react-scripts/bin/react-scripts.js start",
-    "build": "react-scripts build",
+    "build-css": "node-sass --include-path scss src/index.scss src/index.css --output-style compressed",
+    "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1"
   }
 }
