--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "styled-components": "^5.1.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production node_modules/react-scripts/bin/react-scripts.js start",
+    "watch-css": "node-sass src/index.scss src/index.css -w",
+    "start": "npm run watch-css & NODE_ENV=production node_modules/react-scripts/bin/react-scripts.js start",
     "build-css": "node-sass --include-path scss src/index.scss src/index.css --output-style compressed",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test",
