--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-with-direction": "^1.3.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "watch-css": "node-sass src/index.scss src/index.css -w",
