--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "query-string": "^6.12.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
